# life180-sentinel

./: .gitignore  LICENSE  MASTER_PROMPT.md  PROJECT.md  README.md  RULES.md  TASKS.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railpack.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_repositories.py  0002_create_repository_intelligence.py  0003_create_evaluations.py  0004_add_overall_summary.py  0005_version_history_richer_evals.py
backend/app/: main.py
backend/app/api/v1/: evaluation.py  intelligence.py  report.py  repositories.py  router.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py
backend/app/models/: evaluation.py  intelligence.py  repository.py
backend/app/schemas/: evaluation.py  intelligence.py  report.py  repository.py
backend/app/services/: report_service.py  repository_service.py
backend/app/services/evaluation/: __init__.py  evaluator.py
backend/app/services/intelligence/: detectors.py  scanner.py  tree.py
backend/tests/: test_api_health.py  test_intelligence_scanner.py  test_scoring.py  test_url_validation.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: api.test.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/repositories/[id]/: page.tsx
frontend/src/lib/: api.ts
